import React from 'react';
import renderer from 'react-test-renderer';
import { ProductCard } from '..';
import { product1 } from '../../../data';

const { act } = renderer;

describe('ProductCard', () => {
  test('should render correctlly component', () => {
    const wrapper = renderer.create(
      <ProductCard product={product1}>{() => <h1>ProductCard</h1>}</ProductCard>
    );
    expect(wrapper.toJSON()).toMatchSnapshot();
  });

  test('should increase counter', () => {
    const wrapper = renderer.create(
      <ProductCard product={product1}>
        {({ count, handleIncreaseBy }) => (
          <>
            <h1>Product Card</h1>
            <span>{count}</span>
            <button title="button" onClick={() => handleIncreaseBy(1)}></button>
          </>
        )}
      </ProductCard>
    );
    let tree = wrapper.toJSON();
    expect(tree).toMatchSnapshot();
    act(() => (tree as any).children[2].props.onClick());
    tree = wrapper.toJSON();
    expect((tree as any).children[1].children[0]).toBe('0');
  });
});
