// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should increase counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
    title="button"
  />
</div>
`;

exports[`ProductCard should render correctlly component 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    ProductCard
  </h1>
</div>
`;
